--- a/style.css
+++ b/style.css
@@ -3,6 +3,112 @@
     src: url(fonts/TickingTimebombBB.ttf);
   }
 
+  @font-face {
+    font-family: startFont;
+    src: url("fonts/pressStart.ttf");
+  }
+
+  .loader-circle-back{
+
+    margin: 0;
+    padding: 0;
+    background-color: #111111;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 1199
+
+  }
+
+  .loader-circle{
+
+    margin: 0;
+    padding: 0;
+    background-color: #EBEBEB;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    width: 100%;
+    height: 100%;
+    z-index: 1200
+
+  }
+
+  .circle {
+    position: relative;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    z-index: 1200
+    
+ 
+  }
+  
+  .circle:before {
+    content: "";
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    right: 20px;
+    bottom: 20px;
+    border-radius: 50%;
+    box-shadow: 0 0 0 10px #0a2332, 0 0 0 20px #0f3649, 0 0 0 30px #134559, 0 0 0 40px #195d72,
+      0 0 0 50px #1f788c, inset 0 0 40px rgba(0, 0, 0, 0.5);
+  }
+  
+  .dots {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    right: 10px;
+    bottom: 10px;
+    border-radius: 50%;
+    animation: animate 10s linear infinite;
+  }
+  
+  .dots:before {
+    content: "";
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    background: #fff;
+    border-radius: 50%;
+    left: calc(50% - 5px);
+    top: 0;
+    box-shadow: 50px 0 0 #1f788c, -65px -50px 0 #fff, -65px 50px 0 #fff,
+      -55px 0 0 #4a080a, 45px 35px 0 #84cdfa, -40px -40px 0 #a8090a,
+      40px -40px 0 #fff, 55px -59px 0 #b3b594;
+    animation: animate 10s linear infinite;
+  }
+  
+  .dots:after {
+    content: "";
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    background: #fff;
+    border-radius: 50%;
+    left: calc(50% - 5px);
+    bottom: 0;
+    box-shadow: -50px 0 0 #a8090a, 65px 50px 0 #fff, 65px -50px 0 #fff,
+      55px 0 0 #84cdfa, -45px -35px 0 #b3b594, 40px 40px 0 #4a080a,
+      -40px 40px 0 #a8090a, -55px 59px 0 #fff;
+    animation: animate 10s linear infinite;
+  }
+  
+  @keyframes animate {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  
+
+
+
 #timer {
     font-family: timeTickin;
     position: fixed;
@@ -61,7 +167,7 @@ body {
   height: 100%;
   pointer-events: none;
   opacity: 1;
- visibility: hidden;
+  visibility: hidden;
   background: white;
 
 }
@@ -113,4 +219,133 @@ body {
 @-o-keyframes fadein {
   from { opacity: 0; }
   to   { opacity: 1; }
+}
+
+
+
+#bgvid {
+  object-fit: cover;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+}
+
+#riverClick {
+  object-fit: cover;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 101;
+}
+
+#bgvidHover {
+  object-fit: cover;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1101;
+}
+
+.infinity-4 {
+  width:calc(90px / 0.707);
+  height:14px;
+  color: #091c45;
+  background: 
+    repeating-linear-gradient(135deg, currentColor 0 10px,#300e15 0 25px) left top,
+    repeating-linear-gradient( 45deg, currentColor 0 10px,#730c11 0 25px) left bottom;
+  background-size:  110% 50%;
+  background-repeat: no-repeat;
+  animation:i4 2s infinite linear;
+
+  position: fixed;
+  display: block;
+  width: 100%;
+  height: 30%;
+  top: 0;
+  left: 0;
+  text-align: center;
+  opacity: 0.7;
+  z-index: 1000;
+}
+@keyframes i4 {
+    100% {background-position:top right,bottom right}
+}
+
+#loading{
+
+  text-align: center;
+  color: #82070d;
+  padding-top: 1rem;
+  font-family: startFont;
+  font-size: 2rem;
+  position: relative; 
+  z-index: 1000
+ }
+
+.glow {
+ 
+  -webkit-animation: glow 2s ease-in-out infinite alternate;
+  -moz-animation: glow 2s ease-in-out infinite alternate;
+  animation: glow 2s ease-in-out infinite alternate;
+}
+
+.loading-screen {
+  position: absolute;
+  z-index: 1100;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  //background-color: #000000;
+  opacity: 1;
+  //transition: 1.3s opacity;
+}
+
+#loading-screen.fade-out {
+  opacity: 0;
+}
+
+#loader {
+  z-index: 1100;
+  position: relative;
+  left: 50%;
+  top: 30%;
+  width: 150px;
+  height: 150px;
+  margin: -75px 0 0 -75px;
+}
+
+#start {
+  z-index: 1100;
+  position: relative;
+  left: 50%;
+  top: 30%;
+  width: 150px;
+  height: 150px;
+  margin: -75px 0 0 -75px;
+}
+
+
+@-webkit-keyframes glow {
+  from {
+    text-shadow: 0 0 6px rgba(204,217,242, 0.5), 0 0 15px rgba(204,217,242, 0.5), 0 0 16px rgba(84,100,127, 0.5), 0 0 18px rgba(84,100,127, 0.5), 0 0 22px rgba(84,100,127, 0.5), 0 0 25px rgba(84,100,127, 0.5), 0 0 29px rgba(84,100,127, 0.5);
+  }
+  
+  to {
+    text-shadow: 0 0 5px rgba(204,217,242, 0.5), 0 0 11px rgba(130,154,196, 0.5), 0 0 17px rgba(130,154,196, 0.5), 0 0 28px rgba(130,154,196, 0.5), 0 0 22px rgba(130,154,196, 0.5), 0 0 25px rgba(130,154,196, 0.5), 0 0 28px rgba(130,154,196, 0.5);
+  }
+
+}
+
+body{
+
+background-image: linear-gradient(to right, rgba(6,26,65), rgba(8,28,72));
+
 }
